--- a/web/pom.xml
+++ b/web/pom.xml
@@ -87,11 +87,11 @@
             <version>1.0.10</version>
         </dependency>
 
-        <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.30</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>mysql</groupId>-->
+            <!--<artifactId>mysql-connector-java</artifactId>-->
+            <!--<version>5.1.30</version>-->
+        <!--</dependency>-->
 
 
     </dependencies>
