--- a/core/mock/pom.xml
+++ b/core/mock/pom.xml
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>2.1.13</version>
+            <version>${myfaces.version}</version>
             <scope>provided</scope>
         </dependency>
 
