--- a/web/data/hsqldb/hsqldb.properties
+++ b/web/data/hsqldb/hsqldb.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.0
-#Sat May 17 00:05:01 CEST 2014
+#Tue May 20 19:38:52 CEST 2014
 version=2.3.0
-modified=no
+modified=yes
