--- a/web/data/hsqldb/hsqldb.properties
+++ b/web/data/hsqldb/hsqldb.properties
@@ -1,4 +1,4 @@
 #HSQL Database Engine 2.3.0
-#Tue May 20 19:38:52 CEST 2014
+#Tue May 20 22:05:02 CEST 2014
 version=2.3.0
-modified=yes
+modified=no
