--- a/core/mock/pom.xml
+++ b/core/mock/pom.xml
@@ -25,6 +25,11 @@
         </dependency>
 
         <dependency>
+            <groupId>com.kildeen.ref</groupId>
+            <artifactId>ref-core-impl</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.deltaspike.modules</groupId>
             <artifactId>deltaspike-jpa-module-api</artifactId>
             <version>${ds.version}</version>
