--- a/web/pom.xml
+++ b/web/pom.xml
@@ -42,7 +42,7 @@
 
         <dependency>
             <groupId>com.kildeen.ref</groupId>
-            <artifactId>ref-core-impl</artifactId>
+            <artifactId>ref-core-mock</artifactId>
             <scope>runtime</scope>
         </dependency>
 
