--- a/web/pom.xml
+++ b/web/pom.xml
@@ -97,6 +97,8 @@
             <scope>runtime</scope>
         </dependency>
 
+
+
     </dependencies>
 
 
@@ -180,7 +182,31 @@
                     </additionalProjectFacets>
                 </configuration>
             </plugin>
+
+            <!--log42 seems shaky with tomee, try at a later time-->
+            <!--<plugin>-->
+                <!--<groupId>org.codehaus.mojo</groupId>-->
+                <!--<artifactId>exec-maven-plugin</artifactId>-->
+                <!--<version>1.2.1</version>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<phase>process-classes</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>java</goal>-->
+                        <!--</goals>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+                <!--<configuration>-->
+                    <!--<mainClass>org.apache.logging.log4j.core.config.plugins.PluginManager</mainClass>-->
+                    <!--<arguments>-->
+                        <!--<argument>${project.build.outputDirectory}</argument>-->
+                        <!--<argument>jurmous.log4j</argument>-->
+                    <!--</arguments>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
         </plugins>
+
+
     </build>
 
     <repositories>
